# 3D-Rendering

./: .gitignore  AABB.cpp  AABB.h  CMakeLists.txt  Camera.cpp  Camera.h  Cell.cpp  Cell.h  Cylinder.cpp  Cylinder.h  Grid.cpp  Grid.h  Makefile  Object.cpp  Object.h  Plane.cpp  Plane.h  README.md  RandomSampler.cpp  RandomSampler.h  RayCast.cpp  RayCast.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  VectorMath.cpp  app  defaultStructs.h  firstOpenGlApp  gmon.out  hello  hello_v2  loop.sh  main.cpp  main_P3D.cpp  (+7 more)
python/: plotRuntime.py
scenes/: balls_cylinder.nff  balls_cylinder_low.nff  balls_high.nff  balls_low.nff  balls_low_row.nff  balls_medium.nff  balls_minicity.nff  basic.nff  dof_example.nff  minicity.nff  mount_low.nff  mount_very_high.nff  red_carpet.nff
scenes/PLY/: plyread.C
src/: AABB.cpp  AABB.h  Camera.cpp  Cylinder.cpp  Grid.h  Object.h  Plane.cpp  Plane.h  README.md  RandomSampler.cpp  RandomSampler.h  RayCast.h  Scene.h  Sphere.h  defaultStructs.h  main.cpp
